spacing fix2

--- a/css/main.css
+++ b/css/main.css
@@ -55,5 +55,5 @@ ul.posts li {
 }
 
 tr.spaceUnder>td {
-    padding-bottom: 1em;
+    padding-bottom: 5em;
 }
